--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^11.0.2",
     "sass": "^1.80.6"
   },
   "devDependencies": {
